--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   url_launcher: ^5.2.7
   http: ^0.12.0+2
   localstorage: ^3.0.0
+  cached_network_image: ^1.1.3
+  shared_preferences: ^0.5.4+8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
